# Water_soluble_polymer_discovery

./: .gitignore  LICENSE  README.md  command.md  env.yml  pyproject.toml
configs/: config.yaml  config4.yaml  config5.yaml  config5_hpo_fast.yaml  config5_polyimide_quick.yaml  config5_smoke.yaml  config6_2.yaml  config6_2_smoke.yaml
results_small/step1_backbone/: config_used.yaml  run_metadata.json
results_small/step2_sampling/: config_used.yaml  run_metadata.json
scripts/: canonicalize_smiles.py  hparam_opt.py  recheck_pipeline_outputs.py  run_exp_chi_cv.sh  run_hparam_search.sh  run_multitask.sh  run_pretrain_dft.sh  run_scaling_pipeline.py  run_step0.py  run_step1.py  run_step1_2.py  run_step2.py  run_step3.py  run_step4.py  run_step5.py  run_step5.sh  run_step5_1.sh  run_step5_1_euler.sh  run_step5_1_nrel.sh  run_step5_euler.sh  run_step5_hpo.sh  run_step5_hpo_and_5_1.sh  run_step5_hpo_euler.sh  run_step5_hpo_nrel.sh  run_step5_nrel.sh  run_step6.py  run_step6_2.sh  run_step6_2_euler.sh  run_step6_2_hpo.sh  run_step6_2_hpo_and_6_3.sh  run_step6_2_hpo_euler.sh  run_step6_2_hpo_nrel.sh  run_step6_2_nrel.sh  run_step6_3.sh  run_step6_3_euler.sh  run_step6_3_nrel.sh  scaling_gpu.sub  step0_prepare_data.py  step1_train_backbone.py  step2_sample_and_evaluate.py  (+35 more)
src/: __init__.py  chem_utils.py  data_utils.py  datasets.py  eval_utils.py  generative_metrics.py  log_utils.py  optuna_utils.py  plot_utils.py  tokenizer.py  train_utils.py
src/chi/: __init__.py  constants.py  data.py  embeddings.py  inverse_design_common.py  metrics.py  model.py
src/data/: __init__.py  (+6 more)
(+114 files in other folders)
