[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-soluble-polymer-discovery"
version = "0.1.0"
description = "Discrete diffusion + chi-guided inverse design for water-soluble polymers"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "torch>=2.0",
  "torchvision>=0.15",
  "rdkit>=2023.3",
  "scikit-learn>=1.3",
  "optuna>=3.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "joblib>=1.3",
  "tensorboard>=2.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.7",
  "flake8>=6.1",
  "mypy>=1.5",
  "isort>=5.12",
]
